--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '2.7' 
-          cache: 'pip'
+      #- uses: actions/setup-python@v4
+      #  with:
+      #    python-version: '2.7' 
+      #    cache: 'pip'
 
-      - name: Install Python dependencies
-        run: pip install pycrypto requests
+      #- name: Install Python dependencies
+      #  run: pip install pycrypto requests
 
       - name: Setup Node.js
         uses: actions/setup-node@v1
@@ -46,15 +46,15 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
 
-      - name: Grab icons
-        run: |
-          wget https://gist.githubusercontent.com/NWPlayer123/7e6233aee364796c55d85f143bba4bd1/raw/b11771b95fe10da1097a010edd9007815f110faf/verify.py
-          sed 's/from StringIO import StringIO/from io import StringIO/' verify.py >> verify0.py
-          for n in $(node -e "console.log(Object.keys(require('./titles.json')).join(' '))"); 
-          do
-              sed "s/title_id = \".*\"/title_id = \"$n\"/" verify0.py >> $n.py
-              python3 $n.py
-          done
+      #- name: Grab icons
+      #  run: |
+      #    wget https://gist.githubusercontent.com/NWPlayer123/7e6233aee364796c55d85f143bba4bd1/raw/b11771b95fe10da1097a010edd9007815f110faf/verify.py
+      #    sed 's/from StringIO import StringIO/from io import StringIO/' verify.py >> verify0.py
+      #    for n in $(node -e "console.log(Object.keys(require('./titles.json')).join(' '))"); 
+      #    do
+      #        sed "s/title_id = \".*\"/title_id = \"$n\"/" verify0.py >> $n.py
+      #        python3 $n.py
+      #    done
 
       # run build script
       - name: Build Vue site
