--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           cp -r icons dist
           echo 'cemu.emiyl.com' >> dist/CNAME
           echo '' >> dist/.nojekyll
+          cp dist/index.html dist/404.html
           for n in instructions installations;
           do
             cp dist/index.html dist/$n.html
