cache latest releases

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "sharp": "^0.31.0",
+    "sync-request": "^6.1.0",
     "tga2png": "^0.1.3",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
